[package]
name = "mythoside-core"
version = "0.1.0"
description = "MythosIDE local core server — manuscript data, file format, watching"
edition = "2021"

# Empty table: marks this crate as its own workspace root regardless of
# where it's checked out. Without this, Cargo walks up from wherever this
# repo is cloned looking for a workspace-owning Cargo.toml — if it happens
# to be nested inside another Cargo workspace (e.g. mythoside-ts's build
# script clones it into its own tree to build the sidecar binary), Cargo
# tries to fold this crate into that unrelated workspace and fails.
[workspace]

[lib]
name = "mythoside_core"
path = "src/lib.rs"

[[bin]]
name = "mythoside-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
uuid = { version = "1.23.5", features = ["serde", "v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
notify = "8.2.0"
dirs = "6.0.0"
trash = "5.2.6"

[dev-dependencies]
tempfile = "3.27.0"
